# NewLibrary

./: pyproject.toml  requirements.txt
src/newlibrary/: __init__.py
tests/: __init__.py
